...
                                <rect key="frame" x="82.666666666666671" y="578" width="248.66666666666663" height="40"/>
                                <color key="backgroundColor" red="0.99215686274509807" green="0.49411764705882355" blue="0.13725490196078433" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="iMc-ao-IPL"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                <state key="normal" title="Import Wallet">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="8"/>
                                    </userDefinedRuntimeAttribute>
...
            <objects>
                <viewController id="Fjo-ww-rNa" customClass="CreateWalletViewController" customModule="PeepethClient" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="bQl-TE-squ">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter password: MIN 5 chars" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2EJ-AC-Fvt">
                                <rect key="frame" x="20.666666666666657" y="167.66666666666666" width="372.66666666666674" height="40"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="WalletPasswordTextFieldPassphrase"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="c1R-nb-Ku7"/>
                                </constraints>
...
                                    <action selector="buttonTouchedDragInside:" destination="Fjo-ww-rNa" eventType="touchDragInside" id="0ym-BB-GVj"/>
                                    <action selector="buttonTouchedDragOutside:" destination="Fjo-ww-rNa" eventType="touchDragOutside" id="1g7-LX-nNL"/>
                                    <action selector="createWalletButtonTapped:" destination="Fjo-ww-rNa" eventType="touchUpInside" id="z8M-Nj-5hP"/>
                                    <action selector="touchCancel:" destination="Fjo-ww-rNa" eventType="touchCancel" id="1oa-Ja-bz9"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Repeat Password: MIN 5 chars" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FCg-Zf-PeQ">
                                <rect key="frame" x="20.666666666666657" y="252.66666666666663" width="372.66666666666674" height="40"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="WalletPasswordTextFieldPassphrase"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next" secureTextEntry="YES" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no" textContentType="password"/>
                                <connections>
                                    <outlet property="delegate" destination="Fjo-ww-rNa" id="tc6-3B-PwZ"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Private Key" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eQq-3c-ixR">
                                <rect key="frame" x="20.666666666666657" y="339.66666666666669" width="372.66666666666674" height="40"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="WalletPasswordTextFieldPassphrase"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="R0S-zZ-7Rh"/>
                                </constraints>
...
